--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -16,11 +16,17 @@ jobs:
         with:
           fileName: 'keystore/release.keystore'
           encodedString: ${{ secrets.KEYSTORE }}
+      - name: Decode google-services.json
+        id: decode_google_services
+        uses: timheuer/base64-to-file@v1
+        with:
+          fileName: 'android/google-services.json'
+          encodedString: ${{ secrets.GOOGLE_SERVICES }}
       - uses: actions/checkout@v2
-      - name: set up JDK 1.8
+      - name: set up JDK 1.11
         uses: actions/setup-java@v1
         with:
-          java-version: 1.8
+          java-version: 1.11
       - name: Make gradlew executable
         run: chmod +x ./gradlew
       - name: build prod
